# VKInfo

./: .gitignore  CMakeLists.txt  README.md  build.sh  cov.sh  run.sh  test.sh
VKInfoDriver/: CMakeLists.txt
VKInfoDriver/include/: mainwidget.h
VKInfoDriver/src/: main.cc  mainwidget.cc
VKInfoLib/: CMakeLists.txt
VKInfoLib/include/: atomic_metric.h  export.h  metric.h  metrics_logger.h  metrics_registry.h
VKInfoLib/src/: metrics_logger.cc  metrics_registry.cc
VKInfoTest/: CMakeLists.txt
VKInfoTest/src/: test.cpp
lib/: libgmock.so.1.12.1  libgmock_main.so.1.12.1  libgtest.so.1.12.1  libgtest_main.so.1.12.1
lib/cmake/GTest/: GTestTargets.cmake
lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc
